src/objects/Monthly_Production__c.object
<CustomObject>
    <fields>
        <fullName>API10__c</fullName>
        <formula>Well__r.API10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API14__c</fullName>
        <label>API14</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Operator_Name__c</fullName>
        <label>Current Operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Operator (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Monthly Production</relationshipLabel>
        <relationshipName>Monthly_Production</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fluid_Type__c</fullName>
        <label>Fluid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OIL</fullName>
                </value>
                <value>
                    <fullName>GAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formation_at_TD__c</fullName>
        <label>Formation at TD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gas_Differential__c</fullName>
        <formula>If( Lower(Well__r.State__c) == Lower(&apos;Texas&apos;),$CustomMetadata.State_Deduction__mdt.TX_Gas.Differentials__c , If( Lower(Well__r.State__c) == Lower(&apos;Oklahoma&apos;), $CustomMetadata.State_Deduction__mdt.OK_Gas.Differentials__c , If( Lower(Well__r.State__c) == Lower(&apos;New Mexico&apos;), $CustomMetadata.State_Deduction__mdt.NM_Gas.Differentials__c , $CustomMetadata.State_Deduction__mdt.Default_Gas.Differentials__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gas Differential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_Taxes__c</fullName>
        <formula>If( Lower(Well__r.State__c) == Lower(&apos;Texas&apos;), $CustomMetadata.State_Deduction__mdt.TX_Gas.Serverence_Tax__c + $CustomMetadata.State_Deduction__mdt.TX_Gas.Ad_Val__c , If( Lower(Well__r.State__c) == Lower(&apos;Oklahoma&apos;),$CustomMetadata.State_Deduction__mdt.OK_Gas.Serverence_Tax__c + $CustomMetadata.State_Deduction__mdt.OK_Gas.Ad_Val__c , If( Lower(Well__r.State__c) == Lower(&apos;New Mexico&apos;), $CustomMetadata.State_Deduction__mdt.NM_Gas.Serverence_Tax__c + $CustomMetadata.State_Deduction__mdt.NM_Gas.Ad_Val__c , $CustomMetadata.State_Deduction__mdt.Default_Gas.Serverence_Tax__c + $CustomMetadata.State_Deduction__mdt.Default_Gas.Ad_Val__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gas Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gas__c</fullName>
        <description>Value comes from GIS (source is IHS or DI)</description>
        <inlineHelpText>Value comes from GIS (source is IHS or DI)</inlineHelpText>
        <label>Monthly Production (Gas)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liquid__c</fullName>
        <description>Value comes from GIS (source is IHS or DI)</description>
        <inlineHelpText>Value comes from GIS (source is IHS or DI)</inlineHelpText>
        <label>Monthly Production (Oil)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Pricing_Gas__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Monthly Pricing record with gas average monthly prices</description>
        <inlineHelpText>Related Monthly Pricing record with gas average monthly prices</inlineHelpText>
        <label>Monthly Pricing - Gas</label>
        <referenceTo>Monthly_Pricing__c</referenceTo>
        <relationshipLabel>Monthly Production (Gas)</relationshipLabel>
        <relationshipName>Monthly_Production1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Pricing_Oil__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Monthly Pricing record with oil average monthly prices</description>
        <inlineHelpText>Related Monthly Pricing record with oil average monthly prices</inlineHelpText>
        <label>Monthly Pricing - Oil</label>
        <referenceTo>Monthly_Pricing__c</referenceTo>
        <relationshipLabel>Monthly Production (Oil)</relationshipLabel>
        <relationshipName>Monthly_Production</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Realized_Commodity_Price_Gas__c</fullName>
        <formula>Monthly_Pricing_Gas__r.Price__c - Gas_Differential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Realized Commodity Price (Gas)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Realized_Commodity_Price_Oil__c</fullName>
        <formula>Monthly_Pricing_Oil__r.Price__c - Oil_Differential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Realized Commodity Price (Oil)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oil_Differential__c</fullName>
        <formula>If( Lower(Well__r.State__c) == Lower(&apos;Texas&apos;),$CustomMetadata.State_Deduction__mdt.TX_Oil.Differentials__c  , If( Lower(Well__r.State__c) == Lower(&apos;Oklahoma&apos;), $CustomMetadata.State_Deduction__mdt.OK_Oil.Differentials__c  , If( Lower(Well__r.State__c) == Lower(&apos;New Mexico&apos;), $CustomMetadata.State_Deduction__mdt.NM_Oil.Differentials__c  , $CustomMetadata.State_Deduction__mdt.Default_Oil.Differentials__c   )  )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oil Differential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oil_Taxes__c</fullName>
        <formula>If( Lower(Well__r.State__c) == Lower(&apos;Texas&apos;),  $CustomMetadata.State_Deduction__mdt.TX_Oil.Serverence_Tax__c +  $CustomMetadata.State_Deduction__mdt.TX_Oil.Ad_Val__c  , If( Lower(Well__r.State__c) == Lower(&apos;Oklahoma&apos;),$CustomMetadata.State_Deduction__mdt.OK_Oil.Serverence_Tax__c +  $CustomMetadata.State_Deduction__mdt.OK_Oil.Ad_Val__c  , If( Lower(Well__r.State__c) == Lower(&apos;New Mexico&apos;), $CustomMetadata.State_Deduction__mdt.NM_Oil.Serverence_Tax__c +  $CustomMetadata.State_Deduction__mdt.NM_Oil.Ad_Val__c , $CustomMetadata.State_Deduction__mdt.Default_Oil.Serverence_Tax__c +  $CustomMetadata.State_Deduction__mdt.Default_Oil.Ad_Val__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oil Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Water__c</fullName>
        <label>Percent Water</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Type__c</fullName>
        <label>Production Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratio_Gas_Oil__c</fullName>
        <label>Ratio of Gas to Oil</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Unique key built with API10 and Production Date</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique key built with API10 and Production Date</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Water__c</fullName>
        <description>Value comes from GIS (source is IHS or DI)</description>
        <inlineHelpText>Value comes from GIS (source is IHS or DI)</inlineHelpText>
        <label>Monthly Production (Water)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Well_Gross_Revenue_Value_Gas__c</fullName>
        <description>Monthly Production Gas x Monthly Price Gas</description>
        <formula>Net_Realized_Commodity_Price_Gas__c  * Gas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Production Gas x Monthly Price Gas</inlineHelpText>
        <label>Well Gross Revenue Value Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Gross_Revenue_Value_Oil__c</fullName>
        <description>Monthly Production (Oil) x Net Realized Commodity Price (Oil)</description>
        <formula>Net_Realized_Commodity_Price_Oil__c   *  Liquid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Monthly Production (Oil) x Net Realized Commodity Price (Oil)</inlineHelpText>
        <label>Well Gross Revenue Value Oil</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Gross_Revenue_Value__c</fullName>
        <description>Well Gross Revenue Value Oil + Well Gross Revenue Value Gas</description>
        <formula>Well_Gross_Revenue_Value_Gas__c +  Well_Gross_Revenue_Value_Oil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Well Gross Revenue Value Oil + Well Gross Revenue Value Gas</inlineHelpText>
        <label>Well Gross Revenue Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Gross_Taxes_Gas__c</fullName>
        <description>Well Gross Revenue Value Gas x State Taxes.  Taxes will include Severance Tax and Ad Val Tax</description>
        <formula>Well_Gross_Revenue_Value_Gas__c *  Gas_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Well Gross Revenue Value Gas x State Taxes.  Taxes will include Severance Tax and Ad Val Tax</inlineHelpText>
        <label>Well Gross Taxes Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Gross_Taxes_Oil__c</fullName>
        <description>Well Gross Value Oil x State Taxes</description>
        <formula>Well_Gross_Revenue_Value_Oil__c *  Oil_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Well Gross Value Oil x State Taxes</inlineHelpText>
        <label>Well Gross Taxes Oil</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Gross_Taxes__c</fullName>
        <description>Well Gross Taxes Oil + Well Gross Taxes Gas</description>
        <formula>Well_Gross_Taxes_Gas__c +  Well_Gross_Taxes_Oil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Well Gross Taxes Oil + Well Gross Taxes Gas</inlineHelpText>
        <label>Well Gross Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Net_Revenue_Value_Gas__c</fullName>
        <description>Well Gross Revenue Value Gas - Well Gross Taxes Gas</description>
        <formula>Well_Gross_Revenue_Value_Gas__c -  Well_Gross_Taxes_Gas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Well Gross Revenue Value Gas - Well Gross Taxes Gas</inlineHelpText>
        <label>Well Net Revenue Value Gas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Net_Revenue_Value_Oil__c</fullName>
        <description>Well Gross Revenue Value Oil - Well Gross Taxes Oil</description>
        <formula>Well_Gross_Revenue_Value_Oil__c -  Well_Gross_Taxes_Oil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Well Gross Revenue Value Oil - Well Gross Taxes Oil</inlineHelpText>
        <label>Well Net Revenue Value Oil</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well_Net_Revenue_Value__c</fullName>
        <description>Well Gross Revenue Value - Well Gross Taxes</description>
        <formula>Well_Gross_Revenue_Value__c -  Well_Gross_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Well Gross Revenue Value - Well Gross Taxes</inlineHelpText>
        <label>Well Net Revenue Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Well__c</fullName>
        <label>Well</label>
        <referenceTo>Well__c</referenceTo>
        <relationshipLabel>Monthly Production</relationshipLabel>
        <relationshipName>Monthly_Production</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Wellbore_Type__c</fullName>
        <label>Wellbore Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Production</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Production_Date__c</columns>
        <columns>API10__c</columns>
        <columns>Month__c</columns>
        <columns>Last_Update__c</columns>
        <columns>Year__c</columns>
        <columns>Well__c</columns>
        <columns>Liquid__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0000000000}</displayFormat>
        <label>Monthly Production Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Production</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>